<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="search">Search</string>
    <string name="title_themes">Themes</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_sounds">Sounds</string>
    <string name="error">Whoops!</string>
    <string name="update_ready">Update ready, do you want to install it?</string>
    <string name="update">Update</string>
    <string name="install_gboard">Do you want to install Gboard?</string>
    <string name="gboard_not_installed">Gboard isn\'t installed</string>
    <string name="cant_use_app">You cannot use this app without root</string>
    <string name="not_rooted">Your device isn\'t rooted</string>
    <string name="channel_name">Push notifications</string>
    <string name="channel_description">For updates and information</string>
    <string name="channel_name_download">Download notifications</string>
    <string name="channel_description_download">For download notifications</string>
    <string name="download_update">Downloading update</string>
    <string name="download_update_progress">Downloading update (%s)</string>
    <string name="download_complete">Download complete</string>
    <string name="download_error">Error while downloading</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_now">Reboot now?</string>
    <string name="reboot_to_continue">Reboot is required for the module to work</string>
    <string name="apply_theme">Apply theme</string>
    <string name="apply_automatic_theme">Apply automatic theme</string>
    <string name="applied">Theme applied</string>
    <string name="delete_theme">Delete theme</string>
    <string name="q_delete_theme">Do you want to delete this theme?</string>
    <string name="theme_deleted">Theme deleted</string>
    <string name="info">Info</string>
    <string name="theme_count">Theme count</string>
    <string name="theme_path">Theme path</string>
    <string name="installation_method">Installation method</string>
    <string name="other">Other</string>
    <string name="rboard_app_version">Rboard app version</string>
    <string name="device">Device</string>
    <string name="android_version">Android version</string>
    <string name="root_version">Root version</string>
    <string name="gboard_version">Gboard version</string>
    <string name="unsupported_oem">Is unsupported OEM</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="share_themes">Share themes</string>
    <string name="select_at_least_one_not_default_theme">Select at least one not default theme</string>
    <string name="rboard_theme_creator">Rboard Theme Creator</string>
    <string name="downloading_pack">Downloading pack</string>
    <string name="install_themes">Install themes (%s)</string>
    <string name="install">Install</string>
    <string name="themes_installed">Themes installed</string>
    <string name="unpacking_themes">Unpacking themes</string>
    <string name="do_you_want_to_delete_theme">Do you want to delete these themes?</string>
    <string name="show_preinstalled_themes">Show preinstalled themes</string>
    <string name="emoji_compat_app_whitelist">Emoji compat fix</string>
    <string name="flags">Gboard flags</string>
    <string name="themes_header">Themes</string>
    <string name="show_system_theme">Show system theme</string>
    <string name="enable_joystick_delete">Joystick delete</string>
    <string name="deprecate_search">Google icon</string>
    <string name="enable_sharing">Share icon</string>
    <string name="themed_nav_bar_all_devices">Navbar color</string>
    <string name="enable_email_provider_completion">Email provider</string>
    <string name="enable_popup_view_v2">Pop-up V2</string>
    <string name="enable_key_border">Key border</string>
    <string name="enable_secondary_symbols">Secondary symbols</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_all_flags">Show all flags</string>
    <string name="show_all_flags_long">Shows all currently set flags</string>
    <string name="all_flags">All flags</string>
    <string name="loading_preferences">Loading preferences</string>
    <string name="use_silk_theme_by_default">Use silk theme by default</string>
    <string name="monet">Monet</string>
    <string name="silk_on_all_devices">Silk on all devices</string>
    <string name="silk_on_all_pixel">Silk on all Pixel</string>
    <string name="silk_theme">Silk theme</string>
    <string name="android_12">Android 12</string>
    <string name="general">General</string>
    <string name="show_branding_on_space">Show Google branding</string>
    <string name="show_branding_on_space_details">Show the Google branding on the space bar</string>
    <string name="enable_auto_float_keyboard_in_multi_window">Float keyboard</string>
    <string name="pill_shaped_key">Pill-shaped key</string>
    <string name="enable_clipboard_screenshot_paste">Clipboard screenshot paste</string>
    <string name="enable_lens">Enable Google Lens</string>
    <string name="branding">Branding</string>
    <string name="show_branding_interval_seconds">Show branding interval seconds</string>
    <string name="branding_fadeout_delay_ms">Branding fadeout delay</string>
    <string name="monet_details">Keyboard theme based on system theme</string>
    <string name="download_header">Download</string>
    <string name="repos">Repos</string>
    <string name="delete_repo">Delete repo</string>
    <string name="repos_long">Change theme repos</string>
    <string name="apply">Apply</string>
    <string name="add">Add</string>
    <string name="save_repos">Do you want to apply the changes?</string>
    <string name="repository">Repository URL</string>
    <string name="repo_added">Repo added</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Keyboard switch widget</string>
    <string name="flags_app_widget_description">Toggle flags widget</string>
    <string name="flag_applied">Flag applied</string>
    <string name="theme_pack">This is a theme pack</string>
    <string name="description">Description</string>
    <string name="easter_egg">System goes speedy mode now</string>
    <string name="filter_settings">Filter settings</string>
    <string name="settings">Settings</string>
    <string name="select_all">Select all</string>
    <string name="manager">Manager</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_long">Uninstall module and reboot</string>
    <string name="apply_dark">Apply dark theme</string>
    <string name="apply_light">Apply light theme</string>
    <string name="app_theme">App theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_theme">System theme</string>
    <string name="flags_loaded">%o flags loaded</string>
    <string name="show_preinstalled_themes_long">Show preinstalled themes in themes section</string>
    <string name="show_system_theme_long">Show system themes in themes section</string>
    <string name="speedup_process">Speedup process</string>
    <string name="key">Key</string>
    <string name="unreleased">This app is unreleased, some features may not work. Please don\'t report any errors to the main group.</string>
    <string name="notice">Notice</string>
    <string name="flags_applied">Flags applied</string>
    <string name="install_module">Existing themes path found. Do you still want to install the module?</string>
    <string name="module">Install module</string>
    <string name="use_gboard">Do you want to load themes directly on Gboard? Or continue with the module.</string>
    <string name="gboard_magisk">Use the Magisk module instead of loading themes on Gboard</string>
    <string name="use_module">Module</string>
    <string name="use_magisk">Use Magisk</string>
    <string name="gboard">Use Gboard</string>
    <string name="show_only_disabled">Show only disabled flags</string>
    <string name="share_flags">Share flags</string>
    <string name="share_flags_title">Share flags (%o)</string>
    <string name="import_flags_title">Import flags (%o)</string>
    <string name="share_prefs_title">Share prefs (%o)</string>
    <string name="import_prefs_title">Import prefs (%o)</string>
    <string name="model">Model</string>
    <string name="processing_flags">Processing flags</string>
    <string name="load_flags">Load flags</string>
    <string name="load_flags_long">Old flags backup found. Do you want to load it?</string>
    <string name="use_blur">Use blur</string>
    <string name="use_blur_long">Use blur RenderEffects</string>
    <string name="remove_repo">Remove repository?</string>
    <string name="remove_repo_long">Do you want to remove this Repository?</string>
    <string name="do_you_want_to_delete_repo">Do you want to delete these repo?</string>
    <string name="manage_repo">Manage repo</string>
    <string name="address">Address</string>
    <string name="enabled">Enabled</string>
    <string name="themes">Themes</string>
    <string name="invalid_repo">Invalid repo</string>
    <string name="invalid_repo_long">Invalid repo. Please check the URL again.</string>
    <string name="download_themes">Download themes</string>
    <string name="theme_pack_count">Theme pack count</string>
    <string name="theme_packs">Theme packs</string>
    <string name="keyboard_redesign_forbid_key_shadows">Remove key shadows</string>
    <string name="none">None</string>
    <string name="enable_bitmoji_contextual_category_icon">Enable Bitmoji</string>
    <string name="do_not_report">Don\'t report this error</string>
    <string name="menu_moved">Menu is now in the bottom sheet</string>
    <string name="fix_flags">Fix flags</string>
    <string name="fix_flags_long">Delete flags and force stop Gboard</string>
    <string name="flags_fixed">Flags fixed</string>
    <string name="flags_copied">Flags copied</string>
    <string name="try_fix_flags">Try going to Settings and click on \"Fix flags\"</string>
    <string name="flags_corrupted">Flags seems to be corrupted</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="press_back_to_apply">To apply flags just press back</string>
    <string name="sounds_applied">Sounds applied</string>
    <string name="theme_applied">Theme applied</string>
    <string name="all_preferences">All preferences</string>
    <string name="value">Value</string>
    <string name="type">Type</string>
    <string name="ime_test_long">Rboard IME Test</string>
    <string name="install_methods">We provide two installation methods.\nYou can change this anytime in the Settings.</string>
    <string name="magisk_module">Module</string>
    <string name="inside_gboard">Inside Gboard</string>
    <string name="module_1">Separate theme for light and dark</string>
    <string name="module_2">Editing corners and padding props</string>
    <string name="module_3">Changing sounds</string>
    <string name="module_4">Doesn\'t work on ColorOS</string>
    <string name="module_5">Problems on MIUI ROMs</string>
    <string name="gboard_1">Basic downloading and installing themes</string>
    <string name="gboard_2">Doesn\'t require Magisk module</string>
    <string name="gboard_3">Changing sounds won\'t work</string>
    <string name="gboard_4">Themes won\'t appear in Gboard settings</string>
    <string name="gboard_5">Compatibility</string>
    <string name="rboard_theme_patcher">Rboard Patcher</string>
    <string name="deep_link_long">Rboard Deep link</string>
    <string name="close">Close</string>
</resources>