<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.RboardThemeManagerV3.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.RboardThemeManagerV3.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/monetCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monet" />

        <CheckBox
            android:id="@+id/gLogoCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/show_branding_on_space" />

        <CheckBox
            android:id="@+id/keyBorderCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_key_border" />
    </LinearLayout>
</RelativeLayout>