<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_monochrome"
        app:tint="?attr/colorControlNormal"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha=".8"
        android:gravity="center"
        android:text="@string/install_methods"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardMagisk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/colorSurfaceVariant"
            app:cardCornerRadius="24dp"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_magisk"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magisk_module"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/module_1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_positive"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/module_2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_positive"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/module_3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_positive"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/module_4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_negative"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/module_5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_negative"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="?attr/colorSurfaceVariant"
            app:cardCornerRadius="24dp"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_gboard"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inside_gboard"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/gboard_1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_positive"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/gboard_2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_positive"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/gboard_3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_negative"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/gboard_4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_negative"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:alpha=".8"
                        android:drawablePadding="6dp"
                        android:text="@string/gboard_5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        app:drawableStartCompat="@drawable/usage_positive"
                        app:drawableTint="?attr/colorOnSurfaceVariant" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>